Adicionadas tags 'meta'

--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rádio Afonso Santos" />
+    <meta name="author" content="Afonso Santos" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="favicon.png" />
+    <!-- COR PARA GOOGLE CHROME (android) -->
     <meta name="theme-color" content="#375a7f" />
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="Rádio Afonso Santos" />
+    <meta name="twitter:site" content="Rádio Afonso Santos" />
+    <meta name="twitter:creator" content="@afonsosantos53" />
+    <meta name="twitter:title" content="Rádio Afonso Santos" />
+
+    <link rel="icon" href="favicon.png" />
 
     <!-- ESTILOS E FONT AWESOME -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
