Adicionada descrição e imagem

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <meta name="twitter:site" content="Rádio Afonso Santos" />
     <meta name="twitter:creator" content="@afonsosantos53" />
     <meta name="twitter:title" content="Rádio Afonso Santos" />
+    <meta name="twitter:description" content="Outra rádio online" />
+    <meta name="twitter:image:src" content="https://i.imgur.com/RgnB7ZT.png" />
 
     <link rel="icon" href="favicon.png" />
 
