--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <!-- COR PARA GOOGLE CHROME (android) -->
     <meta name="theme-color" content="#375a7f" />
     <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="Rádio Afonso Santos" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="Rádio Afonso Santos" />
-    <meta name="twitter:creator" content="@afonsosantos53" />
-    <meta name="twitter:title" content="Rádio Afonso Santos" />
-    <meta name="twitter:description" content="Outra rádio online" />
-    <meta name="twitter:image:src" content="https://i.imgur.com/RgnB7ZT.png" />
+    <meta name="og:url" content="https://radio-afonsosantos.tk" />
+    <meta name="og:title" content="Rádio Afonso Santos" />
+    <meta name="og:description" content="Outra rádio online" />
+    <meta name="og:image" content="https://i.imgur.com/RgnB7ZT.png" />
 
     <link rel="icon" href="favicon.png" />
 
