--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <link rel="icon" href="favicon.png" />
 
     <!-- ESTILOS E FONT AWESOME -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/font-awesome/css/all.css" />
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="vendor/fancybox/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>Rádio Afonso Santos</title>
   </head>
