Transferidos estilso inline para ficheiro CSS

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="card border-primary mb-3">
                       <div class="card-header">
                         <a href="https://discord.gg/dm8Ze7z" target="_blank">
-                          <i style="color: #ffffff;" class="fab fa-discord fa-3x"></i>
+                          <i class="icone-social fab fa-discord fa-3x"></i>
                         </a>
                       </div>
                       <div class="card-body">
@@ -199,7 +199,7 @@
                     <div class="card border-primary mb-3">
                       <div class="card-header">
                         <a href="mailto:afonso@radio-afonsosantos.tk">
-                          <i style="color: #ffffff;" class="fas fa-envelope fa-3x"></i>
+                          <i class="icone-social fas fa-envelope fa-3x"></i>
                         </a>
                       </div>
                       <div class="card-body">
