Outros estilos inline movidos para o ficheiro CSS

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <a href="" id="imagem_link" data-fancybox="imagem">
                   <img src="" width="110px" id="imagem" class="imagem mr-3 rounded align-self-start img-fluid" />
                 </a>
-                <i id="icone" style="cursor: pointer; " class="fas fa-3x"></i>
+                <i id="icone" class="icon-reprodutor fas fa-3x"></i>
               </div>
               <!-- METADADOS-->
               <div class="media-body">
