--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <meta name="description" content="Rádio Afonso Santos" />
     <meta name="author" content="Afonso Santos" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- COR PARA GOOGLE CHROME (android) -->
-    <meta name="theme-color" content="#375a7f" />
+    <link rel="manifest" href="manifest.json" />
 
     <link rel="icon" href="favicon.png" />
 
