--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="author" content="Afonso Santos" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#3367D6" />
 
     <link rel="icon" href="favicon.png" />
 
