Adicionado service worker

--- a/index.html
+++ b/index.html
@@ -235,5 +235,21 @@
     <script src="js/nowplaying.js"></script>
     <script src="js/player.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script>
+      // ServiceWorker is a progressive technology. Ignore unsupported browsers
+      if ('serviceWorker' in navigator) {
+        console.log('CLIENT: service worker registration in progress.');
+        navigator.serviceWorker.register('service-worker.js').then(
+          function() {
+            console.log('CLIENT: service worker registration complete.');
+          },
+          function() {
+            console.log('CLIENT: service worker registration failure.');
+          }
+        );
+      } else {
+        console.log('CLIENT: service worker is not supported.');
+      }
+    </script>
   </body>
 </html>
