--- a/index.html
+++ b/index.html
@@ -236,19 +236,18 @@
     <script src="js/player.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
     <script>
-      // ServiceWorker is a progressive technology. Ignore unsupported browsers
+      // Register the service worker
       if ('serviceWorker' in navigator) {
-        console.log('CLIENT: service worker registration in progress.');
-        navigator.serviceWorker.register('service-worker.js').then(
-          function() {
-            console.log('CLIENT: service worker registration complete.');
-          },
-          function() {
-            console.log('CLIENT: service worker registration failure.');
-          }
-        );
-      } else {
-        console.log('CLIENT: service worker is not supported.');
+        navigator.serviceWorker
+          .register('service-worker.js')
+          .then(function(registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          })
+          .catch(function(err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
+          });
       }
     </script>
   </body>
