Atualizado horário das playlists

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="description" content="Rádio Afonso Santos" />
     <meta name="author" content="Afonso Santos" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    
+
     <meta name="theme-color" content="#3367D6" />
     <link rel="icon" href="favicon.png" />
 
@@ -116,11 +116,11 @@
           <ul id="lista-playlists" class="list-group mb-5">
             <li class="list-group-item d-flex justify-content-between align-items-center py-1" id="playlist-variada">
               Música Variada
-              <span class="badge badge-primary badge-pill">7h às 23h</span>
+              <span class="badge badge-primary badge-pill">6h às 0h</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center py-1" id="playlist-synthwave">
-              Synthwave
-              <span class="badge badge-primary badge-pill">23h às 7h</span>
+              Synthwave, Retro Electro, Popwave, Dreamwave
+              <span class="badge badge-primary badge-pill">0h às 7h</span>
             </li>
           </ul>
           <p id="mensagem-dj" class="font-weight-bold text-justify">
