Pequena correção dos links do rodapé

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
     <footer class="footer py-4">
       <div class="container">
         <span class="small text-muted">
-          Made with <i id="footer" class="fas fa-heart"></i> by <a href="https://afonsosantos-dev.tk" target="_blank">Afonso Santos</a> |
-          <a href="https://status.afonsosantos-dev.tk" target="_blank">Status da Rádio</a>
+          Made with <i id="footer" class="fas fa-heart"></i> by <a href="https://afonsosantos-dev.tk" class="link-footer" target="_blank">Afonso Santos</a> |
+          <a href="https://status.afonsosantos-dev.tk" class="link-footer" target="_blank">Status da Rádio</a>
         </span>
       </div>
     </footer>
