Corrigida cor da barra de navegação no Chrome Android

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="author" content="Afonso Santos" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <meta name="theme-color" content="#3367D6" />
+    <meta name="theme-color" content="#375a7f" />
     <link rel="icon" href="favicon.png" />
 
     <!-- ESTILOS E FONT AWESOME -->
