--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--
-  Página inicial do website da
-  Rádio Afonso Santos
+  @description Página inicial do website da Rádio Afonso Santos
  
   Website para a Rádio Afonso Santos
   https://github.com/radio-afonso-santos/website
@@ -9,14 +8,15 @@
   https://azuracast.com
   https://github.com/AzuraCast/AzuraCast
  
-  Afonso Santos
+  @author Afonso Santos
   http://afonsosantos-dev.tk
   https://github.com/afonsosantos
  
   Criado em 07/2019
  
-  Licença: Apache-2.0
+  @license Apache-2.0
 -->
+
 <!DOCTYPE html>
 <html lang="pt">
   <head>
