Removido ID duplicado

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="author" content="Afonso Santos" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#375a7f" />
     <link rel="icon" href="favicon.png" />
 
@@ -87,7 +87,7 @@
           </div>
           <!-- VAI TOCAR -->
           <!-- CAPA -->
-          <div id="coluna-seguinte" id="coluna-normal" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
+          <div id="coluna-seguinte" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mb-3">
             <div class="media">
               <a href="" id="imagem_seguinte_link" data-fancybox="imagem_seguinte">
                 <img src="" width="110px" id="imagem-seguinte" class="imagem mr-3 rounded align-self-start img-fluid" />
