--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
     <link rel="stylesheet" href="vendor/fancybox/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
+    <!-- GOOGLE ANALYTICS -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146890352-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-146890352-1');
+    </script>
+
     <title>Rádio Afonso Santos</title>
   </head>
 
