--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-dark bg-primary">
       <a class="navbar-brand" href="/">
-        <img src="img/logotipo_branco.svg" class="d-none d-sm-block logotipo" />
+        <h1>Rádio Afonso Santos</h1>
         <span class="texto-brand d-sm-none">Rádio Afonso Santos</span>
       </a>
       <ul class="navbar-nav navbar-right">
